--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,11 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"United States","country":"United States","image":"unitedstates","ip":"34.94.202.74","active":"true","signal":"a"},
+    {"id":0, "file":0, "city":"United States","country":"United States","image":"unitedstates","ip":"20.205.40.167","active":"true","signal":"a"},
+    {"id":1, "file":1, "city":"Bangladesh","country":"Bangladesh","image":"bangladesh","ip":"20.205.40.167","active":"true","signal":"a"},
+{"id":2, "file":2, "city":"India","country":"India","image":"india","ip":"20.205.40.167","active":"true","signal":"a"},
+  {"id":3, "file":3, "city":"Pakistan","country":"Pakistan","image":"pakistan","ip":"20.205.40.167","active":"true","signal":"a"},
+  {"id":0, "file":0, "city":"Russia","country":"Russia","image":"russia","ip":"20.205.40.167","active":"true","signal":"a"},
+  {"id":0, "file":0, "city":"Turkey","country":"Turkey","image":"turkey","ip":"20.205.40.167","active":"true","signal":"a"},
   ]
 }
